--- a/oadmin/src/main/resources/static/public/index.html
+++ b/oadmin/src/main/resources/static/public/index.html
@@ -12,6 +12,12 @@
   <link href="/css/bootstrap-theme.css" rel="stylesheet" type="text/css" charset="utf-8">
   <link rel="stylesheet" href="/application.css" type="text/css" charset="utf-8">
   
+  
+</head>
+<body>
+
+  
+  
   <script src="/application.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/crypto/hmac-sha1.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/crypto/enc-base64-min.js" type="text/javascript" charset="utf-8"></script>
@@ -30,8 +36,6 @@
       var App = require("index");
       exports.app = new App({el: $("body")});
     });
-  </script>
-  
-</head>
-<body></body>
+  </script>  
+</body>
 </html>
