more on caching...

--- a/oadmin/src/main/resources/static/public/index.html
+++ b/oadmin/src/main/resources/static/public/index.html
@@ -3,20 +3,17 @@
 <head>
   <meta charset=utf-8>
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Amadou Cisse">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schola</title>
 
   <!-- Bootstrap -->
   <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" charset="utf-8">
   <link href="/css/bootstrap-theme.css" rel="stylesheet" type="text/css" charset="utf-8">
-  <link rel="stylesheet" href="/application.css" type="text/css" charset="utf-8">
-  
+  <link rel="stylesheet" href="/application.css" type="text/css" charset="utf-8"> 
   
 </head>
-<body>
-
-  
+<body>  
   
   <script src="/application.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/crypto/hmac-sha1.js" type="text/javascript" charset="utf-8"></script>
