--- a/oadmin/src/main/resources/static/public/index.html
+++ b/oadmin/src/main/resources/static/public/index.html
@@ -9,11 +9,41 @@
 
   <!-- Bootstrap -->
   <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" charset="utf-8">
-  <link href="/css/bootstrap-theme.css" rel="stylesheet" type="text/css" charset="utf-8">
+<!--   <link href="/css/bootstrap-theme.css" rel="stylesheet" type="text/css" charset="utf-8"> -->
   <link rel="stylesheet" href="/application.css" type="text/css" charset="utf-8"> 
   
 </head>
 <body>  
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Schola</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <!-- <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li> -->
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+
+    <div class="container">
+
+      <div class="starter-template">
+        <h1>Bootstrap starter template</h1>
+        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+      </div>
+
+    </div><!-- /.container -->  
   
   <script src="/application.js" type="text/javascript" charset="utf-8"></script>
   <script src="/javascripts/crypto/hmac-sha1.js" type="text/javascript" charset="utf-8"></script>
@@ -30,8 +60,8 @@
   <script type="text/javascript" charset="utf-8">
     var exports = this;
     jQuery(function(){
-      var App = require("index");
-      exports.app = new App({el: $("body")});
+      // var App = require("index");
+      // exports.app = new App({el: $("body")});
     });
   </script>  
 </body>
