more work on login, changepasswd, index retrieval; done with pro-active caching; more caching with roles; fixes, ...

--- a/oadmin/src/main/resources/static/public/index.html
+++ b/oadmin/src/main/resources/static/public/index.html
@@ -8,9 +8,9 @@
   <title>Schola</title>
 
   <!-- Bootstrap -->
-  <link href="/css/bootstrap.css" rel="stylesheet" type="text/css" charset="utf-8">
+  <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css" charset="utf-8">
 <!--   <link href="/css/bootstrap-theme.css" rel="stylesheet" type="text/css" charset="utf-8"> -->
-  <link rel="stylesheet" href="/application.css" type="text/css" charset="utf-8"> 
+  <link rel="stylesheet" href="/assets/application.css" type="text/css" charset="utf-8"> 
   
 </head>
 <body>  
@@ -45,17 +45,16 @@
 
     </div><!-- /.container -->  
   
-  <script src="/application.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/javascripts/crypto/hmac-sha1.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/javascripts/crypto/enc-base64-min.js" type="text/javascript" charset="utf-8"></script>
-  <script src="/javascripts/crypto/mac.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/assets/application.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/assets/javascripts/crypto/hmac-sha1.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/assets/javascripts/crypto/enc-base64-min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="/assets/javascripts/crypto/mac.js" type="text/javascript" charset="utf-8"></script>
 
   <script type="text/javascript" charset="utf-8">
     var jQuery  = require("jqueryify");
   </script>  
-
-  <script src="/javascripts/jquery.upload.js"></script>
-  <script src="/javascripts/bootstrap.js"></script>
+  <script src="/assets/javascripts/jquery.upload.js"></script>
+  <script src="/assets/javascripts/bootstrap.js"></script>
   
   <script type="text/javascript" charset="utf-8">
     var exports = this;
